turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:21: error: Int does not take parameters
    gauche()
          ^